--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
 					<img src="images/p2.jpg" alt="" class="img-fluid" />
-					<p><span class="far fa-tags"></span> <span>20$</span></p>
+					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Лос-Анджелес, США.</h6>
@@ -268,7 +268,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
 					<img src="images/p3.jpg" alt="" class="img-fluid" />
-					<p><i class="far fa-tags"></i> <span>20$</span></p>
+					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Агра, Индия.</h6>
@@ -282,14 +282,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
 					<img src="images/p4.jpg" alt="" class="img-fluid" />
-					<p><i class="far fa-tags"></i> <span>20$</span></p>
+					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
 					<h5 class="my-2">Sodales vel mauris</h5>
 					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
 					<ul class="listing mt-3">
-						<li><i class="far fa-clock-o mr-2"></i>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
 					</ul>
 				</div>
 			</div>
@@ -331,11 +331,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/china.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -352,11 +352,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/malaysia.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -373,11 +373,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/japan.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -394,11 +394,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/singapore.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
-							<li><i class="far fa-star"></i></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
+							<li><span class="far fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
@@ -439,10 +439,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					Lorem ipsum dolor.</p>
 				</div>
 				<ul class="social_section_1info">
-					<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><i class="fab fa-facebook-f"></i></a></li>
-					<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><i class="fab fa-instagram"></i></a></li>
-					<li class="viber"><a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"><i class="fab fa-viber"></i></a></li>
-					<li class="telegram"><a href="tg://resolve?domain="><i class="fab fa-telegram-plane"></i></a></li>
+					<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fab fa-facebook-f"></span></a></li>
+					<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span class="fab fa-instagram"></span></a></li>
+					<li class="viber"><a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"><span class="fab fa-viber"></span></a></li>
+					<li class="telegram"><a href="tg://resolve?domain="><span class="fab fa-telegram-plane"></span></a></li>
 				</ul>
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
