--- a/index.html
+++ b/index.html
@@ -394,11 +394,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/singapore.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
-							<li><span class="far fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
+							<li><span class="fa fa-star"></span></li>
 						</ul>
 					</div>
 				</div>
