--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
 					<img src="images/p4.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>230₴</span></p>
+					<p><span class="fa fa-tags"></span> <span>230грн.</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
