--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             window.scrollTo(0, 1);
         }
     </script>
-	
+	<!--favicon.ico-->
+    <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
+	<!--//favicon.ico-->
 	<!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
     <!--<link href="css/font-awesome.min.css" rel="stylesheet">--><!-- fontawesome css -->	
-	
 	<!-- //css files -->
 	<!-- aos.css files -->
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
