--- a/packages.html
+++ b/packages.html
@@ -114,21 +114,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 			</div>
+			<!--  Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
 					<img src="images/p4.png" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<p><span class="fa fa-tags"></span> <span>230грн.</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Париж, Франция.</h6>
-					<h5 class="my-2">Sodales vel mauris</h5>
-					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+					<h5 class="my-2">Лимонарий</h5>
+					<p class="">Экскурсия в Лимонный сад с Новым поворотом.</p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
 					</ul>
 				</div>
 			</div>
-			
+			<!--  //Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
 					<img src="images/p1.jpg" alt="" class="img-fluid" />
