--- a/packages.html
+++ b/packages.html
@@ -191,16 +191,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </section>
 <!-- tour packages -->
 
-<!-- destinations -->
+<!-- destinations | Популярные Направления-->
 <section class="destinations py-5" id="destinations">
 	<div class="container py-xl-5 py-lg-3">
 		<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-				<h4 class="destination mb-3">Китай</h4>
+				<h4 class="destination mb-3">Лимонарий</h4>
 				<div class="image-position position-relative">
-					<img src="images/china.jpg" class="img-fluid" alt="">
+					<img src="images/ЛимонарийПопулярный.png" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
@@ -213,7 +213,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Китай</h4>
+						<h4>Лимонарий</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
@@ -284,7 +284,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 </section>
-<!-- destinations -->
+<!-- destinations | Популярные Направления -->
 
 <!--footer -->
 <footer>
