--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 			<ul class="menu ml-auto mt-1">
 				<li class=""><a href="index.html">Главная</a></li>
 				<li class="active"><a href="about.html"> О Нас </a></li>
-				<li class=""><a href="services.html">Сервисы</a></li>
+				<!--<li class=""><a href="services.html">Сервисы</a></li>-->
 				<li class=""><a href="packages.html">Туры</a></li>
 				<li class=""><a href="contact.html">Контакты</a></li>
 				<li class="booking"><a href="booking.html">Забронировать</a></li>
