--- a/packages.html
+++ b/packages.html
@@ -46,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<ul class="menu ml-auto mt-1">
 				<li class=""><a href="index.html">Главная</a></li>
 				<li class=""><a href="about.html"> О Нас </a></li>
-				<li class=""><a href="services.html">Сервисы</a></li>
+				<!--<li class=""><a href="services.html">Сервисы</a></li>-->
 				<li class="active"><a href="packages.html">Туры</a></li>
 				<li class=""><a href="contact.html">Контакты</a></li>
 				<li class="booking"><a href="booking.html">Забронировать</a></li>
