--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--  Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" style="width: 255px; height: 170px;"/>
+					<img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
 					<p><span class="fa fa-tags"></span> <span>230грн.</span></p>
 				</div>
 				<div class="package-info">
@@ -340,7 +340,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
 				<h4 class="destination mb-3">Лимонарий</h4>
 				<div class="image-position position-relative">
-					<img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="Лимонарий" style="width: 255px; height: 291px;">
+					<img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="Лимонарий">
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
