--- a/packages.html
+++ b/packages.html
@@ -132,7 +132,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--  //Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
-					<img src="images/p1.jpg" alt="" class="img-fluid" />
+					<img src="images/2021 Лим 2550 на 1700.jpg" alt="" class="img-fluid" />
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
@@ -200,7 +200,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
 				<h4 class="destination mb-3">Лимонарий</h4>
 				<div class="image-position position-relative">
-					<img src="images/2021 Лим 255 на 291.jpg" class="img-fluid" alt="">
+					<img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
