--- a/packages.html
+++ b/packages.html
@@ -174,7 +174,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
-					<img src="images/p4.png" alt="" class="img-fluid" />
+					<img src="images/2021 Лим 2550 на 1700.jpg" alt="" class="img-fluid" />
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
