--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
 
                     <h6>Расположение</h6>
-                    <p>The company name
+                    <p>Новый Поворот
                         <br>Запорожье, Украина. </p>
                 </li>
 
