--- a/contact.html
+++ b/contact.html
@@ -162,10 +162,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
-					<p>Расположение:  1234 lock, Charlotte, North Carolina, United States</p>
-					<p>Телефон:  +12 534894364</p>
+					<p>Расположение:  69005, Запорожье, Украина</p>
+					<p>Телефон: +38(098) 577 15 79</p>
 					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
-					<p>Fax : +12 534894364</p>
+					
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
