--- a/about.html
+++ b/about.html
@@ -30,7 +30,6 @@
 	<!-- //google fonts -->
 </head>
 <body>
-
 <!-- header -->
 <header>
 	<div class="container">
@@ -230,10 +229,10 @@
 					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
-					<p>Location : 1234 lock, Charlotte, North Carolina, United States</p>
-					<p>Phone : +12 534894364</p>
+					<p>Расположение:  69005, Запорожье, Украина</p>
+					<p>Телефон: +38(098) 577 15 79</p>
 					<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
-					<p>Fax : +12 534894364</p>
+					
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
