--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <span class="fa fa-envelope-open-o"></span>
                     </div>
                     <h6>Телефон и электронная почта</h6>
-                    <p><a href="tel:+380985771579" >+38(098) 577 15 79</a></p>
+                    <p><a href="tel:+380985771579" >+38(098) 577 15 79</a> | <a href="tel:+380506702264" >+38(050) 670 22 64</a></p>
                     <a href="mailto:info@example.com" class="mail">info@examplemail.com</a>
                 </li>
                 <li class="col-md-4 col-sm-6 adress-w3pvt-info mt-md-0 mt-4">
