--- a/about.html
+++ b/about.html
@@ -230,7 +230,7 @@
 				</div>
 				<div class="footer-text">
 					<p>Расположение:  69000, Запорожье, Украина</p>
-					<p>Телефон: +38(098) 577 15 79</p>
+					<p>Телефон: +38(098) 577 15 79, +38(050) 670 22 64</p>
 					<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
 					
 				</div>
