--- a/about.html
+++ b/about.html
@@ -15,7 +15,9 @@
             window.scrollTo(0, 1);
         }
     </script>
-	
+	<!--favicon.ico-->
+    <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
+	<!--//favicon.ico-->
 	<!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
