--- a/booking.html
+++ b/booking.html
@@ -17,6 +17,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         }
     </script>
 	
+        <!--favicon.ico-->
+    <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
+	<!--//favicon.ico-->
 	<!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
