--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container py-lg-5 py-sm-4">
 		<div class="row">
 			<div class="col-lg-6 about-left">
-				<h3 class="mt-lg-3">Мы отвезем вас в лучшие места мира, <strong> путешествуйте вместе с нами!  </strong></h3>
+				<h3 class="mt-lg-3">Мы отвезем вас в лучшие места Украины, <strong> путешествуйте вместе с нами!  </strong></h3>
 				<p class="mt-4">Duis nisi sapien, elementum finibus fermentum eget, aliquet leo et. Mauris hendrerit vel ex.
 				Quisque vitae luctus massa. Phasellus sed aliquam leo. Vestibulum ullamcorper a massa eu fringilla. Integer ultrices finibus sed nisi.
 				in convallis felis dapibus sit amet.</p>
