--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <h6>Телефон и электронная почта</h6>
                     <p><a href="tel:+380985771579" >+38(098) 577 15 79</a>, <a href="tel:+380506702264" >+38(050) 670 22 64</a></p>
-                    <a href="mailto:info@example.com" class="mail">info@examplemail.com</a>
+                    <a href="mailto:dovgalyv@ukr.net" class="mail">dovgalyv@ukr.net</a>
                 </li>
                 <li class="col-md-4 col-sm-6 adress-w3pvt-info mt-md-0 mt-4">
 
@@ -167,7 +167,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="footer-text">
 					<p>Расположение:  69000, Запорожье, Украина</p>
 					<p>Телефон: +38(098) 577 15 79, +38(050) 670 22 64</p>
-					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
+					<p>Электронная почта: <a href="mailto:dovgalyv@ukr.net">dovgalyv@ukr.net</a></p>
 					
 				</div>
 			</div>
