--- a/booking.html
+++ b/booking.html
@@ -157,7 +157,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="footer-text">
 					<p>Расположение:  69000, Запорожье, Украина</p>
 					<p>Телефон: +38(098) 577 15 79, +38(050) 670 22 64</p>
-					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
+					<p>Электронная почта: <a href="mailto:dovgalyv@ukr.net">dovgalyv@ukr.net</a></p>
 					
 				</div>
 			</div>
