--- a/packages.html
+++ b/packages.html
@@ -302,8 +302,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="footer-text">
 					<p>Расположение:  69000, Запорожье, Украина</p>
 					<p>Телефон: +38(098) 577 15 79, +38(050) 670 22 64</p>
-					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
-					
+					<p>Электронная почта: <a href="mailto:dovgalyv@ukr.net">dovgalyv@ukr.net</a></p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
