--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Туры</h3>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row">
-			<!--  ЛПариж, Франция. | Париж, Франция. -->
+			<!--  Париж, Франция. | Париж, Франция. -->
 			<div class="col-lg-3 col-sm-6">
 				<div class="image-tour position-relative">
 					<img src="images/p1.jpg" alt="" class="img-fluid" />
@@ -272,10 +272,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<!--  //Лос-Анджелес, США.  -->
 			
-			<!--  Агра, Индия | Агра, Индия -->
+			<!--  Полтава | экскурсия в Полтаву -->
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
-					<img src="images/Poltava-max.jpg" alt="" class="img-fluid" />
+					<img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
@@ -287,7 +287,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 			</div>
-			<!--  //Агра, Индия  -->
+			<!--  //Полтава  -->
 			
 			<!--  Лимонарий Запорожье | экскурсия в Лимонный сад с Новым поворотом  -->
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
