--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p><span class="fa fa-tags"></span> <span>20$</span></p>
 				</div>
 				<div class="package-info">
-					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Агра, Индия.</h6>
-					<h5 class="my-2">Sodales vel mauris</h5>
-					<p class="">Vestibulum tellus neque, et velit mauris at, augue.</p>
+					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Полтава, Украина.</h6>
+					<h5 class="my-2">Полтава из Запорожья</h5>
+					<p class="">Лыжные покатухи и колоритный хутор с Новым поворотом </p>
 					<ul class="listing mt-3">
-						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>10 Дней</span></li> 
+						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
 					</ul>
 				</div>
 			</div>
