--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-5">
 				<div class="image-tour position-relative">
 					<img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
-					<p><span class="fa fa-tags"></span> <span>20$</span></p>
+					<p><span class="fa fa-tags"></span> <span>1700грн.</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Полтава, Украина.</h6>
