--- a/packages.html
+++ b/packages.html
@@ -223,9 +223,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-				<h4 class="destination mb-3">Малайзия</h4>
+				<h4 class="destination mb-3">Полтава</h4>
 				<div class="image-position position-relative">
-					<img src="images/malaysia.jpg" class="img-fluid" alt="">
+					<img src="images/Poltava-max.jpg" class="img-fluid" alt="">
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
@@ -238,7 +238,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Малайзия</h4>
+						<h4>Полтава</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
