--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -58,14 +58,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </header>
 <!-- //header -->
+<section>
+<h2>Полтава</h2>
 
 
 
 
 
-
-
-
+</section>
 <!--footer -->
 <footer>
 <section class="footer footer_w3layouts_section_1its py-5">
