--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -58,6 +58,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </header>
 <!-- //header -->
+
+<!-- banner -->
+<section class="banner_inner" id="home">
+	<div class="banner_inner_overlay">
+	</div>
+</section>
+<!-- //banner -->
+
 <section>
 <h2>Полтава</h2>
 
@@ -66,6 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 </section>
+
 <!--footer -->
 <footer>
 <section class="footer footer_w3layouts_section_1its py-5">
