--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <h3 class="title">Our Single page</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/blog3.jpg" alt="news image" class="img-fluid">
+          <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <div class="blog-date-time mb-2">
               <ul>
@@ -97,15 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
         </div>
       </div>
-      <div class="newsletter mt-lg-5 mt-md-4 mt-3">
-        <h4 class="mb-3">Subscribe to our newsletter & get $25 Off*</h4>
-        <form action="#" method="post" class="d-flex">
-          <input type="email" name="Your Email" class="form-control" placeholder="Your Email" required="">
-          <button class="btn1">
-            <span class="fa fa-envelope" aria-hidden="true"></span>
-          </button>
-        </form>
-      </div>
+     
       <div class="comments-w3layouts-grid pt-lg-5 pt-md-4 pt-3">
         <div class="comments-grid-right mb-lg-4 mb-3">
           <h4>Our Recent Comments</h4>
