--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -72,7 +72,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">Our Single page</h3>
+          <h3 class="title">Полтава из Запорожья</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
           <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
@@ -85,10 +85,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </ul>
             </div>
             <h4 class="mb-3">
-              Полтава
+              Лыжные покатухи и колоритный хутор с Новым поворотом 
             </h4>
             <p>
-
+              Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
             </p>
           </div>
         </div>
