--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -80,7 +80,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="blog-date-time mb-2">
               <ul>
                 <li>
-                  July 2020/7
+                  13-14 Февраля 2021 
                 </li>
               </ul>
             </div>
@@ -90,6 +90,52 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <p>
               Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
             </p>
+            <p>
+              Стоимость: 1700 грн. 2 дня
+            </p>
+            <p>
+              Не забудь своих друзей, в большой компании всегда веселей!
+            </p>
+            <p>
+             Бронирование билетов осуществляется заранее,
+обращаться с дирет/месенджер, Viber/Telegram +380506702264
+Присоединяйтесь к сообществу в Viber Новый Поворот Запорожье : https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp
+            </p>
+             <h4> 1 ДЕНЬ </h4>
+            <p>
+             13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
+12:00-18:00   Сорочин Яр  горнолыжный комплекс, который находится всего в 14 км  от Полтавы и совсем близко от Диканьки!
+Здесь есть  четыре трассы: одна учебная для лыжников-новичков, одна — для катания на тюбах и две трассы протяженностью 300 м каждая — для катания на лыжах и сноу — доске. Состояние снежного покрова склонов поддерживается при помощи «снежных» пушек и укатывается ратраком , а два бугельных подъемника обеспечивают минимальное время  стояния в очереди  для подъема на склон. 
+Если вам надоели лыжи или борд, можно покататься на коньках или санках, заняться сноутюбингом или просто  перекусить и выпить горячий глинтвейн.
+При желании — можно что -нибудь самим  приготовить! С пылу, с жару и с горячих углей! Грильзона находится на  открытой терассе, где есть столики , музыка и обзор на все Трассы и горки!
+Или посетить местную пицерию — «Фанера» : молодежная атмосфера, необычный интерьер, вкусная  фирменная пицца под бокал вкусного разливного пива!
+Переезжаем на поселение в колоритную «Веселу садибу» (в 5 км от комплекса).
+18:15 Гостевой дом «Весела садыба»  — потрясающий семейный отель, красиво оформленный под украинский  хутор.
+Высокий уровень сервиса, в домах чисто и тепло, номера —  в национальном стиле, большие, уютные,  в которых есть все для комфортного проживания.
+Нас ждут гостепреимные хозяева и вкусный домашний  ужин!! Такое  чувство что приехал к любимой бабушке!!!!
+На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!!!!
+            </p>
+           <h4> 2 ДЕНЬ </h4>
+             <p>
+              После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта 19-нач. 20 века и целое собрание  старинных вышивок.
+После 11 часов выезжаем в Полтаву. 
+Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора, памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.
+ 
+После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет….
+Выезд в 17:00. В Запорожье ориентировочно приезжаем в 21:00. 
+*время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
+
+В стоимость входит:
+
+транспортное обслуживание;
+проживание — 1 ночь в усадьбе ;
+питание: ужин и завтрак (домашняя украинская кухня);
+банный релакс (2 ч);
+обзорная экскурсия в Полтаве (3 ч);
+сопровождение. 
+ 
+
+             </p>
           </div>
         </div>
       </div>
