--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -133,7 +133,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 банный релакс (2 ч);
 обзорная экскурсия в Полтаве (3 ч);
 сопровождение. 
- 
+
+ В стоимость не входит:
+
+прокат лыжного снаряжения и скипасс на подъемники ;
+обеды в первый и во второй дни.
 
              </p>
           </div>
