--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -99,7 +99,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <p>
              Бронирование билетов осуществляется заранее,
 обращаться с дирет/месенджер, Viber/Telegram +380506702264
-Присоединяйтесь к сообществу в Viber Новый Поворот Запорожье : https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp
+Присоединяйтесь к сообществу в <a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"> Viber Новый Поворот Запорожье</a>
             </p>
              <h4> 1 ДЕНЬ </h4>
             <p>
