--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -101,7 +101,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 обращаться с дирет/месенджер, Viber/Telegram +380506702264
 Присоединяйтесь к сообществу в <a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"> Viber Новый Поворот Запорожье</a>
             </p>
+
+<details>
+            <summary>
              <h4> 1 ДЕНЬ </h4>
+            </summary>
             <p>
              13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
 12:00-18:00   Сорочин Яр  горнолыжный комплекс, который находится всего в 14 км  от Полтавы и совсем близко от Диканьки!
@@ -115,7 +119,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 Нас ждут гостепреимные хозяева и вкусный домашний  ужин!! Такое  чувство что приехал к любимой бабушке!!!!
 На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!!!!
             </p>
+<summary>
            <h4> 2 ДЕНЬ </h4>
+</summary>
              <p>
               После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта 19-нач. 20 века и целое собрание  старинных вышивок.
 После 11 часов выезжаем в Полтаву. 
@@ -124,7 +130,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет….
 Выезд в 17:00. В Запорожье ориентировочно приезжаем в 21:00. 
 *время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
-
+</p>
+</details>
+<p>
 В стоимость входит:
 
 транспортное обслуживание;
