--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -119,6 +119,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 Нас ждут гостепреимные хозяева и вкусный домашний  ужин!! Такое  чувство что приехал к любимой бабушке!!!!
 На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!!!!
             </p>
+</details>
+<details>
 <summary>
            <h4> 2 ДЕНЬ </h4>
 </summary>
