--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -104,7 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <details>
             <summary>
-             <h4> 1 ДЕНЬ </h4>
+              1 ДЕНЬ 
             </summary>
             <p>
              13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
@@ -122,7 +122,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </details>
 <details>
 <summary>
-           <h4> 2 ДЕНЬ </h4>
+            2 ДЕНЬ 
 </summary>
              <p>
               После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта 19-нач. 20 века и целое собрание  старинных вышивок.
